--- a/Prva Stranka/styles.css
+++ b/Prva Stranka/styles.css
@@ -365,21 +365,22 @@ ul{
 .hwrap{
     overflow:hidden;
     width: 500px; 
-    height: fit-content;
+    height: 300px;
+
 }
 
 
 @keyframes slideh {
-  0% { right: 0; } 
-  30% { right: 0; }
-  33% { right: 100%; } 
-  63% { right: 100%; }
-  66% { right: 0%; }
+  0%   { right: 0; } 
+  30%  { right: 100%; }
+  33%  { right: 100%; } 
+  63%  { right: 100%; }
+  66%  { right: 0; }
   100% { right: 0; }
 }
  
 .hmove{ 
-    animation: slideh 5s ease-in-out 5s infinite; 
+    animation: slideh 10s ease-in-out 10s infinite; 
 }
 
 .student-id{
@@ -429,6 +430,7 @@ ul{
 
 .container-join{
     background-color: white;
+    padding-bottom: 100px;
 }
 
 .join-text{
@@ -464,8 +466,8 @@ ul{
     padding: 10px;
     display: flex;         
     flex-direction: column;  
-    justify-content: space-between; 
-    gap: 10px;
+    justify-content:space-between; 
+    gap: 0;
 }
 
 .cards h5 {
@@ -499,6 +501,57 @@ ul{
     transition: color 0.3s ease-in-out;
     transition: padding-left 0.5s ease-in-out;
 }
+
+.slide{
+  display: flex;
+  flex-direction: row;
+}
+
+.slide-1-text{
+  position:absolute;
+  background-color: #A54FA2;
+  color: white;
+  max-width: 585px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 40px 32px;
+  left: -18px;
+  width: 65%;
+  height: 100%;
+  border: 1px solid rgba(0,0,0,0.125);
+  box-sizing: border-box;
+  bottom: 25%;
+}
+
+.slide-1-text h3{
+  font-size: 30px;
+  font-weight: bold;
+}
+.slide-1-text span{
+  font-size: 18px;
+  font-weight: bold;
+}
+.slide figure{
+  height: 500px;
+  width: 75%;
+  border-radius: 19px;
+  display: block !important;
+  overflow: hidden;
+}
+.slide img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: inline;
+  max-width: 100%;
+  vertical-align: middle;
+}
+
+
+
+
 
 
 
