--- a/Prva Stranka/styles.css
+++ b/Prva Stranka/styles.css
@@ -1,43 +1,70 @@
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: SF Pro display, sans-serif;
+    margin: 0px;
 }
 
-.btn{
-font-weight: 600;
-font-size: 15px;
-color: #fff;
-background-color: #3597ff;
-padding: 16px 25px;
-border: none;
-border-radius: 8px;
-align-items: center;
-cursor: pointer;
-}
-
-.start{
-    background-color: #3597FF; 
-    height: 440px;
-    margin-right: -10px;
-    margin-left:-10px ;
-}
-
-.main-navbar{   
+.discord-container{
     display: flex;
-    align-items: center; 
-    background-color: white;
-    padding-right: 200px;
-    font-weight: 600;   
+    max-width: 1320px;
+    height: 50px;
+    margin: auto;
+    
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid #dee2e6;
+    font-size: 13px;
+    font-weight: bold;
+    gap: 40px;
 }
-.main-navbar img{
-    padding-left: 400px;
-}
-.main-navbar li{
-    color: black;
-    font-size: 12px;    
-    transition: color 0.3s;
+.discord-container a{
+    background-color: rgba(152, 156, 162, 0.15);
+    border: 1px solid rgba(125, 156, 162, 0.15);
+    padding: 6px 12px;
+    border-radius: 50rem;
+    text-decoration: none;
+    color: #989ca2;
+    transition: color .15s ease-in-out;
+    font-size: 12px;
     
 }
-.main-navbar li:hover{
+.discord-container i{
+    color: #5865F2;
+}
+
+.discord-container a:hover{
+    color: #2A2E32;
+}
+
+
+
+.btn{
+    font-weight: 600;
+    font-size: 15px;
+    color: #fff;
+    background-color: #3597ff;
+    padding: 16px 25px;
+    border: none;
+    border-radius: 8px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.container-navbar{   
+    display: flex;
+    align-items: center;
+    margin: auto;
+    max-width: 1320px;
+    justify-content: space-between;
+    box-sizing: border-box;
+    background-color: white;
+    font-weight: 600;   
+}
+.navbar-links li{
+    color: black;
+    font-size: 12px;    
+    transition: color 0.3s;   
+}
+.navbar-links li:hover{
     color: #3597FF;
     cursor: pointer;
 }
@@ -46,47 +73,46 @@ cursor: pointer;
     list-style: none; 
     justify-content: space-evenly;
     flex: 1; 
-    padding-right: 0px;
 }
-ul{
+.navbar-links ul{
     display: flex;
     list-style: none; 
     justify-content: space-evenly;
     flex: 1; 
-    padding-right: 125px;
-    padding-left: 125px;
-    
 }
 
 
 
-.main-page{
-    
-    margin-left: 400px;
-    margin-right: 200px;
-    box-sizing: border-box;
-    font-size: 120%;
-    
-    
+
+.main{    
+    background-color: #3597FF;
+    box-sizing: border-box;  
+}
+.main-page {
+    color: white !important;
+    width: 1320px;
+    height: fit;
+    margin: auto !important;
+    font-size: 25px;
+    font-weight: 0;
+}
+
+.main-text{
+    padding: 48px 0px 48px 0px;
+    z-index: 1;
+    width: 500px;
 }
 .main-page h1{
-    color: white !important;
-    padding-top: 60px;
-    width: 500px;
-    font-size: 30px;
-    font-weight: 10;
-    text-align: left;
-    
+    font-weight: 100;
 }
-.main-page span{
-    font-weight:1000;
-    font-size: 25px;
+.main-text span{
+    font-weight: bold;
+    font-size: 37px;
 }
 .main-page p{
     color: white;
-    width: 500px;
     font-size: 15px;
-    font-weight:500 ;
+    font-weight: bold ;
 }
 
 .why{
@@ -502,7 +528,7 @@ ul{
     transition: padding-left 0.5s ease-in-out;
 }
 
-.slide{
+/* .slide{
   display: flex;
   flex-direction: row;
 }
@@ -548,7 +574,7 @@ ul{
   max-width: 100%;
   vertical-align: middle;
 }
-
+ */
 
 
 
